# irisqo

./: Cargo.toml  LICENSE  README.md  req.http
sql/: db.sql
src/: main.rs
src/db/: instances.rs  jobqueue.rs  jobs.rs  mod.rs  results.rs  schedules.rs
src/features/: mod.rs
src/features/echo/: mod.rs
src/features/history/: jobhistory.rs  mod.rs
src/features/instances/: db.rs  http.rs  mod.rs
src/features/live/: mod.rs
src/features/results/: db.rs  http.rs  job_result.rs  mod.rs
src/features/schedules/: db.rs  http.rs  job_schedule.rs  mod.rs  schedule_row.rs
src/handlers/: http.rs  https.rs  jobs.rs  live.rs  mod.rs  results.rs  schedules.rs
src/models/: error.rs  job.rs  jobresult.rs  jobretry.rs  mod.rs  schedule.rs  state.rs
src/otel/: headerinjector.rs  mod.rs
src/services/: batchworkerservice.rs  channelworkerservice.rs  jobqueue.rs  jobrunner.rs  mod.rs  naiveworkerservice.rs  schedulerservice.rs  timerjobservice.rs
