[package]
name = "irisqo"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
futures = "0.3"
async-channel = "1.9"
# JSON libs
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
http-serde = "1.1"
serde_urlencoded = "0.7"
# Web libs
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4.0", features = ["trace"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "*" }
url = { version = "2.4" }
# Configuration & Observability
dotenv = "0.15.0"
opentelemetry = { version = "0.20", features = [
    "rt-tokio",
    "metrics",
    "trace",
] }
opentelemetry-otlp = { version = "0.13", features = [
    "metrics",
    "tls",
    "trace",
] }
opentelemetry-http = { version = "0.9", features = ["hyper", "tokio"] }
opentelemetry-stdout = { version = "*", features = ["metrics", "trace"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.21" }
# DB
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json",
] }
# sqlb = "0.0.8"
# Types
thiserror = "1.0"
uuid = { version = "1.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
problemdetails = { version = "0.2", features = ["axum"] }
whoami = { version = "1.4" }
bytes = { version = "1", features = ["serde"] }
ulid = { version = "1" }
cron = { version = "0.12"}

[dev-dependencies]
anyhow = "1"
