[package]
name = "irisqo"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
futures = "0.3"
async-channel = "2.1.0"
# JSON libs
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
http-serde = "2.0.0"
serde_urlencoded = "0.7"
# Web libs
axum = "0.7.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"]}
hyper-tls = { version = "0.6" }
http-body-util = { version = "0.1" }
url = { version = "2.4" }
# Configuration & Observability
dotenv = "0.15.0"
opentelemetry = { version = "0.21", features = [
    "metrics",
    "trace",
] }
opentelemetry-otlp = { version = "0.14", features = [
    "metrics",
    "tls",
    "trace",
] }
opentelemetry_sdk = "0.21"
opentelemetry-http = { version = "0.10", features = ["hyper", "tokio"] }
opentelemetry-stdout = { version = "0.2", features = ["metrics", "trace"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.22" }
clap = { version = "4.4", features = ["derive"] }

# DB
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json",
] }
# sqlb = "0.0.8"
# Types
thiserror = "1.0"
uuid = { version = "1.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
problemdetails = { version = "0.3", features = ["axum"] }
whoami = { version = "1.4" }
bytes = { version = "1", features = ["serde"] }
ulid = { version = "1" }
cron = { version = "0.12"}

[dev-dependencies]
anyhow = "1"
