[package]
name = "irisqo"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
futures = "0.3"
async-channel = "2.3"
# JSON libs
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0"
http-serde = "2.1"
serde_urlencoded = "0.7"
# Web libs
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
hyper-tls = { version = "0.6" }
http-body-util = { version = "0.1" }
url = { version = "2.5" }
# Configuration & Observability
dotenvy = "0.15"
opentelemetry = { version = "0.30", features = ["metrics", "trace"] }
# opentelemetry-otlp = { version = "0.14", features = [
#     "metrics",
#     "tls",
#     "trace",
# ] }
opentelemetry_sdk = "0.30"
# opentelemetry-http = { version = "0.30", features = ["hyper", "tokio"] }
opentelemetry-stdout = { version = "0.30", features = ["metrics", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.31" }
xflags = { version = "0.3" }

# DB
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json",
] }
# sqlb = "0.0.8"
# Types
thiserror = "2.0"
uuid = { version = "1.17", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
problemdetails = { version = "0.6", features = ["axum"] }
whoami = { version = "1.6" }
bytes = { version = "1", features = ["serde"] }
ulid = { version = "1" }
cron = { version = "0.15" }

[dev-dependencies]
anyhow = "1"
